--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="app-header glass">
         <div class="header-content">
-            <h1 id="page-title">JS TECH</h1>
+            <h1 id="page-title">Batalha dos inscritos</h1>
             <div id="header-action">
                 </div>
         </div>
@@ -109,3 +109,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
