--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             <i class="fab fa-tiktok"></i>
             <span>TikTok</span>
         </button>
-        <button class="nav-item" onclick="window.open('https://youtube.com', '_blank')">
-            <i class="fab fa-youtube"></i>
-            <span>YouTube</span>
+        <button class="nav-item" onclick="window.open('https://instagram.com/SEU_PERFIL_AQUI', '_blank')">
+            <i class="fab fa-instagram"></i>
+            <span>Instagram</span>
         </button>
     </nav>
 
@@ -109,4 +109,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
