--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             <i class="fab fa-tiktok"></i>
             <span>TikTok</span>
         </button>
-        <button class="nav-item" onclick="window.open('https://instagram.com/SEU_PERFIL_AQUI', '_blank')">
+        
+        <button class="nav-item" onclick="window.open('https://www.instagram.com/batalha_dos_inscritos/', '_blank')">
             <i class="fab fa-instagram"></i>
             <span>Instagram</span>
         </button>
@@ -109,5 +110,6 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
